--- a/styles/all.css
+++ b/styles/all.css
@@ -7499,6 +7499,10 @@ textarea.form-control-lg {
   top: 100% !important;
 }
 
+.top-auto {
+  top: auto !important;
+}
+
 .bottom-0 {
   bottom: 0 !important;
 }
@@ -7509,6 +7513,10 @@ textarea.form-control-lg {
 
 .bottom-100 {
   bottom: 100% !important;
+}
+
+.bottom-auto {
+  bottom: auto !important;
 }
 
 .start-0 {
@@ -7523,6 +7531,10 @@ textarea.form-control-lg {
   left: 100% !important;
 }
 
+.start-auto {
+  left: auto !important;
+}
+
 .end-0 {
   right: 0 !important;
 }
@@ -7533,6 +7545,10 @@ textarea.form-control-lg {
 
 .end-100 {
   right: 100% !important;
+}
+
+.end-auto {
+  right: auto !important;
 }
 
 .translate-middle {
