--- a/styles/all.css
+++ b/styles/all.css
@@ -8916,6 +8916,15 @@ textarea.form-control-lg {
   visibility: hidden !important;
 }
 
+.bg-attachment-fixed {
+  background-attachment: fixed !important;
+}
+
+.object-fit-cover {
+  -o-object-fit: cover !important;
+     object-fit: cover !important;
+}
+
 @media (min-width: 576px) {
   .float-sm-start {
     float: left !important;
@@ -13362,4 +13371,20 @@ textarea.form-control-lg {
   .d-print-none {
     display: none !important;
   }
+}
+.deco-box {
+  width: 240px;
+  height: 240px;
+  background-color: #71ddff;
+}
+
+.bg-cover {
+  background-size: cover;
+  background-position: center center;
+  background-repeat: no-repeat;
+}
+
+.bg-dark-gradient {
+  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0)), to(rgba(0, 0, 0, 0.8)));
+  background-image: linear-gradient(180deg, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.8));
 }
