--- a/stylesheets/all.scss
+++ b/stylesheets/all.scss
@@ -42,3 +42,7 @@
 
 // Utilities
 @import '../node_modules/bootstrap/scss/utilities/api';
+
+// components
+@import './components/deco-box';
+@import './components/utilities';
